# mongodb-api-rs

./: .gitignore  Cargo.toml  Rocket.toml  Rocket.toml.example  bread_data.json  readme.md
src/: db.rs  main.rs  models.rs  routes.rs
