[package]
name = "mongodb-api-rs"
authors = ["Jacob Latonis"]
description = "A straightfoward API using MongoDB and Rocket."
version = "0.1.0"
edition = "2021"
readme = "readme.md"

[dependencies]
mongodb = "2.8.1"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["mongodb"] }
serde_json = "1.0.114"
